# swe-debug-agent

./: .gitignore  README.md  checkpoint_manager.py  lats_agent.py  lats_helpers.py  pyproject.toml
config/: mcp_servers.json  prompts.yaml  settings.py
src/: schemas.py  state.py  worktree_utils.py
src/agents/: __init__.py  agents.py  base.py
src/memory/: __init__.py  memory.py
src/tools/: __init__.py  file_system.py  github.py  langchain_tools.py  mcp_client.py  ruff.py  search_limiter.py  tool_logger.py
src/utils/: __init__.py  git_manager.py  gpu_memory_manager.py  linting.py  path_resolver.py
