[project]
name = "swe-debug-agent"
version = "0.1.0"
description = "Multi-agent framework for software debugging"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pygithub>=2.1.0",
    "requests>=2.31.0",
    "ruff>=0.1.0",
    "langgraph>=0.2.0",
    "deepagents>=0.1.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-core>=0.3.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
postgres = [
    "psycopg2-binary>=2.9.0",
    "langgraph-checkpoint-postgres>=0.1.0",
]


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
